--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Nicholas Ikiroma",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.0"
